--- a/WAP/W1D1/index.html
+++ b/WAP/W1D1/index.html
@@ -4,7 +4,7 @@
         <title>Sujit Kumar Chanda</title>
     </head>
     <body>
-        <img src="SujitKumarChanda.JPG" alt="Sujit Kumar Chanda">
+        <img src="SujitKumarChanda.JPG" alt="Sujit Kumar Chanda" width="150" height="150">
         <h1>Sujit Kumar Chanda</h1>
         <ul>
             <li>W1D1 - HTML</li>
